--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
+    "chess-moments": "^0.6.2",
     "chess.js": "^0.11.0",
     "chessground": "^7.9.1",
     "modali": "^1.2.0",
