--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "chess-viewer",
+  "main": "dist/index.js",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,17 +17,22 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.3",
     "babel-core": "^6.21.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.24.1",
+    "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^3.5.1",
+    "file-loader": "^6.1.0",
     "path": "^0.12.7",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3",
     "style-loader": "^1.1.3",
+    "svg-url-loader": "^6.0.0",
+    "transfer-webpack-plugin": "^0.1.4",
+    "url-loader": "^4.1.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.2.1"
   },
