--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "main": "dist/index.js",
   "version": "0.1.0",
   "private": true,
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "bootstrap": "^4.5.2",
     "chess-moments": "^0.6.2",
@@ -25,13 +28,10 @@
     "copy-webpack-plugin": "^6.1.0",
     "css-loader": "^3.5.1",
     "file-loader": "^6.1.0",
-    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.3",
     "style-loader": "^1.1.3",
-    "svg-url-loader": "^6.0.0",
-    "transfer-webpack-plugin": "^0.1.4",
     "url-loader": "^4.1.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^3.2.1"
@@ -39,6 +39,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "webpack",
+    "prepare": "rm -rf dist && webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
